fix z-index

--- a/components/Background/Background.module.sass
+++ b/components/Background/Background.module.sass
@@ -4,7 +4,7 @@
     left: 0
     width: 100vw
     height: 100vh
-    z-index: 6
+    z-index: 5
     perspective: 20em
     transform-style: preserve-3d
     perspective-origin: 50%
